# Database-Backup-Utility

./: README.md  requirements.txt  setup.py
dbvault/: .env.example  .gitignore  Makefile  pyproject.toml  requirements.txt  setup.py
dbvault/dbvault/: __init__.py  cli.py  scheduler.py
dbvault/dbvault/backup/: __init__.py  manager.py
dbvault/dbvault/connectors/: __init__.py  base.py  factory.py  mongodb.py  mysql.py  postgresql.py  sqlite.py
dbvault/dbvault/notifications/: slack.py
dbvault/dbvault/restore/: __init__.py  manager.py
dbvault/dbvault/storage/: azure.py  base.py  factory.py  gcs.py  local.py  s3.py
dbvault/dbvault/utils/: config.py  listing.py  logger.py
dbvault/scripts/: backup_example.sh  restore_example.sh  schedule_example.sh
dbvault/tests/: test_dbvault.py
